--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,9 +39,8 @@ jobs:
       - name: Freeze
         run: cabal freeze
 
-      - name: Restore cache
+      - name: Restore cabal store
         uses: actions/cache@v3
-        name: Cache ~/.cabal/store
         with:
           path: ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
           key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
