--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Restore cabal store
         uses: actions/cache@v3
         with:
-          path: ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
+          path: ~/.cabal
           key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
 
       - name: Build dependencies
