--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,7 +64,8 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.ghc }} == '9.2.4'
+        if: startsWith(github.ref, 'refs/tags/')
+        if: ${{ matrix.ghc }} == '9.2.4'
         with:
           body_path: Release.md
           files: mailnotify-*
