--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,8 @@
-name: Build
+name: Release
 
 on:
   workflow_dispatch:
-  push:
-    branches: [main]
+  workflow_call:
 
 jobs:
   build:
@@ -11,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ['8.10.7', '9.2.4']
+        ghc: ['9.2.4']
         cabal: [latest]
         os: [ubuntu-latest]
     name: Haskell GHC ${{ matrix.ghc }}
@@ -57,4 +56,10 @@ jobs:
           # sed -e "s/^pkgver=.*$/pkgver=$VERSION/" aur/PKGBUILD >PKGBUILD
           echo "package_version=$VERSION" >> $GITHUB_ENV
           ls -l
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          body_path: Release.md
+          files: mailnotify-*
 
