--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ dist-newstyle/
 cabal.project.freeze
 cabal.project.local
 .ghc.environment.*
-mailnotify-Linux-x86_64
-mailnotify-Linux-x86_64.sha256
+mailnotify-*-Linux-x86_64
+mailnotify-*-Linux-x86_64.sha256
 # stack
 .stack-work/
 
