--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
+  schedule:
+    # additionally run three times per week at midnight to maintain cache
+    - cron: '0 0 * * Mon,Wed,Sat'
 
 jobs:
   build:
@@ -11,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ['8.10.7', '9.2.4']
+        ghc: ['8.10.7', '9.2.4', '9.4.1']
         cabal: [latest]
         os: [ubuntu-latest]
     name: Haskell GHC ${{ matrix.ghc }}
@@ -35,11 +38,15 @@ jobs:
       - name: Freeze
         run: cabal freeze
 
-      - name: Restore cabal store
+      - name: Cache ~/.cabal/packages, ~/.cabal/store and dist-newstyle
         uses: actions/cache@v3
         with:
-          path: ~/.cabal
-          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
+          path: |
+            ~/.cabal/packages
+            ~/.cabal/store
+            dist-newstyle
+          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('**/*.cabal', '**/cabal.project', '**/cabal.project.freeze') }}
+          restore-keys: ${{ runner.os }}-${{ matrix.ghc }}-
 
       - name: Build dependencies
         run: cabal build --only-dependencies
