--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,8 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         ghc: ['8.10.7', '9.2.4', '9.4.1']
-        cabal: [latest]
-        os: [ubuntu-latest]
+        cabal: [3.6.2.0]
+        os: [ubuntu-22.04]
     name: Haskell GHC ${{ matrix.ghc }}
 
     steps:
