--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ on:
     branches: [main]
   schedule:
     # additionally run three times per week at midnight to maintain cache
-    - cron: '0 0 * * Mon,Wed,Sat'
+    # - cron: '0 0 * * Mon,Wed,Sat'
 
 jobs:
   build:
@@ -38,15 +38,15 @@ jobs:
       - name: Freeze
         run: cabal freeze
 
-      - name: Cache ~/.cabal/packages, ~/.cabal/store and dist-newstyle
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cabal/packages
-            ~/.cabal/store
-            dist-newstyle
-          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('**/*.cabal', '**/cabal.project', '**/cabal.project.freeze') }}
-          restore-keys: ${{ runner.os }}-${{ matrix.ghc }}-
+#      - name: Cache ~/.cabal/packages, ~/.cabal/store and dist-newstyle
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.cabal/packages
+#            ~/.cabal/store
+#            dist-newstyle
+#          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('**/*.cabal', '**/cabal.project', '**/cabal.project.freeze') }}
+#          restore-keys: ${{ runner.os }}-${{ matrix.ghc }}-
 
       - name: Build dependencies
         run: cabal build --only-dependencies
